# convertGVFtoVCF

./: .gitignore  README.md  ReservedINFOkeys.txt  convertGVFtoVCF.py  dgvaINFOattributes.txt  pyproject.toml  requirements.txt  svALTkeys.txt
.github/workflows/: python-package.yml
convert_gvf_to_vcf/: assisting_converter.py  assistingconverter.py  conversionstatistics.py  convertGVFtoVCF.py  convert_gvf_to_vcf_logic.py  dgva_schema_generator.py  gather_metadata.py  gvf_file_finder.py  gvf_metadata_coordinator.py  gvffeature.py  helpers.py  hpc_file_finder.py  logger.py  lookup.py  metadataJSON.py  project_paths.py  projectpaths.py  utils.py  vcf_line.py  vcfline.py
convert_gvf_to_vcf/etc/: DGVaMetadataOnly.tsv  DGVa_schema.json  INFOattributes.tsv  attribute_mapper.tsv  attribute_mapper.yaml  config.yaml  dgvaINFOattributes.txt  dgva_schema.json  gvfINFOattributes.tsv  query_mapper.yaml  sequence_ontology_symbolic_alleles.tsv  svALTkeys.tsv  svFILTERkeys.tsv  svFORMATkeys.tsv  svINFOkeys.txt
convert_gvf_to_vcf/metadata_retrievers/: base_metadata_retriever.py  basemetadataretriever.py  (+5 more)
input/: a.gvf  zebrafish.gvf
tests/: test_DGVAmetadataretriever.py  test_EVAmetadataretriever.py  test_assisting_converter.py  test_conversion_statistics.py  test_conversionstatistics.py  test_convert_gvf_to_vcf.py  test_dgva_metadata_retriever.py  test_eva_metadata_retriever.py  test_gather_metadata.py  test_gvf_file_finder.py  test_gvf_metadata_coordinator.py  test_hpc_file_finder.py  test_logger.py  test_metadataJSON.py  test_utils.py  test_vcf_line.py  test_vcfline.py
(+18 files in other folders)
